--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -6,7 +6,6 @@ Best thesis ever:
 	institution = {Institut für Informatik 5, Technische Universität München},
 	month = nov,
 	organization = {Institut für Informatik 5, Technische Universität München},
-	school = {Institut für Informatik 5, Technische Universität München},
 	title = {Task Based Parallelization of the Fast Multipole Method implementation of ls1-mardyn via QuickSched},
 	type = {Master's thesis},
 	year = {2017},
@@ -18,7 +17,6 @@ Best thesis ever:
 	institution = {Lehrstuhl für Wissenschaftliches Rechnen, Technische Universität München},
 	month = nov,
 	organization = {Lehrstuhl für Wissenschaftliches Rechnen, Technische Universität München},
-	school = {Lehrstuhl für Wissenschaftliches Rechnen, Technische Universität München},
 	title = {{Implementing a TensorFlow-Slim based Android app for image classification}},
 	type = {Bachelor's thesis},
 	year = {2020},
@@ -31,6 +29,21 @@ Best thesis ever:
    urldate = {2021-07-31},
    url = {https://developer.android.com/ndk/guides/neuralnetworks},
    year = {2021},
+}
+@online{kotlinFirst,
+	author = {Android Developers},
+	title = {{Android’s Kotlin-first approach}},
+	urldate = {2021-07-31},
+	url = {https://developer.android.com/kotlin/first},
+	year = {2021},
+}
+@online{googleIO17,
+	author = {Google Developers},
+	month = {5},
+	title = {{Google I/O Keynote (Google I/O '17)}},
+	url = {https://youtu.be/Y2VF8tmLFHw?t=5245},
+	urldate = {2021-07-31},
+	year = {2017},
 }
 @online{dl_ranking_2018,
    author = {Jeff Hale},
@@ -123,14 +136,14 @@ Best thesis ever:
 	year = {2021},
 	urldate = {2021-07-31},
 }
-@article{rcnnIntro,
+@article{detectorRCNN,
 	author = {Ross Girshick and Jeff Donahue and Trevor Darrell and Jitendra Malik},
 	journal = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
 	month = {11},
 	pages = {580-587},
 	publisher = {IEEE Computer Society},
 	title = {Rich feature hierarchies for accurate object detection and semantic segmentation},
-	year = {2013},
+	year = {2014},
 }
 @online{mlCourseStan,
 	author = {Andrew Ng},
@@ -336,7 +349,7 @@ Best thesis ever:
 	title = {20th International Symposium on Symbolic and Numeric Algorithms for Scientific Computing},
 	booktitle = {20th International Symposium on Symbolic and Numeric Algorithms for Scientific Computing},
 	publisher = {Institute of Electrical and Electronics Engineers Inc.},
-	venue = {Timișoara, Romania}.
+	venue = {Timișoara, Romania},
 	month = {9},
 	year = {2018},
 	isbn = {},
@@ -420,4 +433,46 @@ Best thesis ever:
 	year = {2016},
 	ISBN = {9783319464480},
 	ISSN = {1611-3349},
+}
+@phdthesis{depthSep,
+	author = {Laurent Sifre},
+	institution = {École Polytechnique, CMAP},
+	title = {{Rigid-Motion Scattering For Image Classification}},
+	url = {https://www.di.ens.fr/data/publications/papers/phd_sifre.pdf},
+	year = {2014},
+	type = {PhD thesis},
+}
+@article{backboneMobileNet,
+	author = {Andrew G. Howard and Menglong Zhu and Bo Chen and Dmitry Kalenichenko and Weijun Wang and Tobias Weyand and Marco Andreetto and Hartwig Adam},
+	month = {4},
+	title = {{MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications}},
+	url = {https://arxiv.org/abs/1704.04861v1},
+	year = {2017},
+}
+@online{dl_ranking_2018,
+	author = {Jeff Hale},
+	journal = {Towards Data Science},
+	month = {9},
+	title = {{Deep Learning Framework Power Scores 2018}},
+	url = {https://towardsdatascience.com/deep-learning-framework-power-scores-2018-23607ddf297a},
+	urldate = {2021-07-31},
+	year = {2018},
+}
+@online{nullPointerOverops,
+	author = {Alex Zhitnitsky},
+	journal = {OverOps},
+	month = {6},
+	title = {{The Top 10 Exception Types in Production Java Applications - Based on 1B Events}},
+	url = {https://www.overops.com/blog/the-top-10-exceptions-types-in-production-java-applications-based-on-1b-events/},
+	urldate = {2021-07-31},
+	year = {2016},
+}
+@online{nullPointerSamebug,
+	author = {Andras Horvath},
+	journal = {samebug},
+	month = {6},
+	title = {{Which Java exceptions are the most frequent?}},
+	url = {https://blog.samebug.io/which-java-exceptions-are-the-most-frequent-f830b113c37f},
+	urldate = {2021-07-31},
+	year = {2018},
 }
